force-app/main/default/objects/Plaza__c/Plaza__c.object-meta.xml
<CustomObject>
    <description>En el objeto Plaza se recogerá toda la información de estructura, de módulos y de distribución de habitaciones y camas de los centros/ residencia así como de las plazas de Centro de día</description>
    <label>Plaza</label>
    <nameField>
        <label>Nombre de Plaza</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plazas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>