force-app/main/default/objects/Plaza__c/fields/Cama__c.field-meta.xml
<CustomField>
    <fullName>Cama__c</fullName>
    <description>Código de la cama</description>
    <label>Cama</label>
    <length>15</length>
    <type>Text</type>
</CustomField>