force-app/main/default/objects/Plaza__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <description>Categorización del usos de esa plaza.</description>
    <label>Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residencia</fullName>
            </value>
            <value>
                <fullName>Apartamento</fullName>
            </value>
            <value>
                <fullName>Centro de día/ SED (L-V)</fullName>
            </value>
            <value>
                <fullName>Centro de día de respiro (S-D)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>