force-app/main/default/objects/Plaza__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <description>Centro al que pertenece la plaza</description>
    <label>Centro</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plazas</relationshipLabel>
    <relationshipName>Plazas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>