force-app/main/default/objects/Plaza__c/fields/EsFantasma__c.field-meta.xml
<CustomField>
    <fullName>EsFantasma__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca con un check si se trata de una plaza fantasma</description>
    <label>Es Fantasma</label>
    <type>Checkbox</type>
</CustomField>