force-app/main/default/objects/Plaza__c/fields/Habitacion__c.field-meta.xml
<CustomField>
    <fullName>Habitacion__c</fullName>
    <description>Código de la habitación. No es único porque hay habitaciones dobles, con dos camas</description>
    <label>Habitación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>