force-app/main/default/objects/Plaza__c/fields/IdUnico__c.field-meta.xml
<CustomField>
    <fullName>IdUnico__c</fullName>
    <description>Identificador único de la plaza (cama) en SAP</description>
    <externalId>true</externalId>
    <label>Id. Único</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>