force-app/main/default/objects/Plaza__c/fields/NombreUnidadOrganizativa__c.field-meta.xml
<CustomField>
    <fullName>NombreUnidadOrganizativa__c</fullName>
    <description>Nombre de la unidad organizativa de la plaza</description>
    <label>Nombre Unidad Organizativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>