force-app/main/default/objects/Plaza__c/fields/PlazaInhabilitada__c.field-meta.xml
<CustomField>
    <fullName>PlazaInhabilitada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cuando se crearon las plazas se hicieron de más. Este campo es para indicar que las plazas tienen que ser inhabilitadas y no borradas por si en un futuro se vuelven a habilitar (en SAP están inhabilitadas)</description>
    <label>Plaza Inhabilitada</label>
    <type>Checkbox</type>
</CustomField>