force-app/main/default/objects/Plaza__c/fields/PlazaOcupada__c.field-meta.xml
<CustomField>
    <fullName>PlazaOcupada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la plaza está en uso actualmente en alguna oportunidad en estado cerrada o reserva de plaza</description>
    <label>Plaza ocupada</label>
    <type>Checkbox</type>
</CustomField>