force-app/main/default/objects/Plaza__c/fields/Subcategoria__c.field-meta.xml
<CustomField>
    <fullName>Subcategoria__c</fullName>
    <description>Subcategorización del usos de esa plaza.</description>
    <label>Subcategoría</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Categoria__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanente</fullName>
            </value>
            <value>
                <fullName>Temporal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>