force-app/main/default/objects/Plaza__c/fields/TipoPlaza__c.field-meta.xml
<CustomField>
    <fullName>TipoPlaza__c</fullName>
    <description>Indica si la plaza está ocupada por una plaza pública o privada. Solo se rellena en las plazas ocupadas, las libres no tienen esta caracteristica.</description>
    <label>Tipo de plaza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoPlaza</valueSetName>
    </valueSet>
</CustomField>