force-app/main/default/objects/Plaza__c/fields/UnidadOrganizativa__c.field-meta.xml
<CustomField>
    <fullName>UnidadOrganizativa__c</fullName>
    <description>Código de SAP para identificar el módulo y planta de la plaza</description>
    <label>Unidad Organizativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>