force-app/main/default/objects/Plaza__c/recordTypes/CentroDia.recordType-meta.xml
<RecordType>
    <fullName>CentroDia</fullName>
    <active>true</active>
    <description>Tipo de registro para las plazas de centro de día</description>
    <label>Centro de día</label>
</RecordType>