force-app/main/default/objects/Plaza__c/recordTypes/Residencia.recordType-meta.xml
<RecordType>
    <fullName>Residencia</fullName>
    <active>true</active>
    <description>Tipo de registro para las plazas de residencia</description>
    <label>Residencia</label>
</RecordType>