force-app/main/default/objects/Plaza__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TipoPlaza__c</columns>
    <columns>PlazaOcupada__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cuenta__c</field>
        <operation>contains</operation>
        <value>Torrejón</value>
    </filters>
    <filters>
        <field>Cuenta__c</field>
        <operation>startsWith</operation>
        <value>2824</value>
    </filters>
    <label>Todos</label>
</ListView>